add the copyright block

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -50,3 +50,7 @@
 
 <!-- index.html content ends here -->
 {% endblock %}
+
+{% block copyright%}
+This is one is made by me
+{% endblock copyright%}
