--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -20,6 +20,7 @@
                             </div>
                             <a href="#" class="post-link">
                                 <h2 class="card-title">{{ post.title }}</h2>
+                                <p class="card-text">{{ post.excerpt }}</p>
                             </a>
 
                             <hr />
@@ -52,5 +53,5 @@
 {% endblock %}
 
 {% block copyright%}
-This is one is made by me
+This one is made by me
 {% endblock copyright%}
