--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -7,9 +7,9 @@
     <div class="row">
         <div class="col-12 col-md-4 text-center">
             {% if "placeholder" in about.profile_image.url %}
-            <img src="{% static 'images/nobody.jpg' %}" alt="placeholder image" width="75%" >
+            <img src="{% static 'images/nobody.jpg' %}" alt="placeholder image" class="profile-image" >
             {% else %}
-            <img src=" {{ about.profile_image.url }}" alt="{{ about.title }}" width="75%" >
+            <img src=" {{ about.profile_image.url }}" alt="{{ about.title }}" class="profile-image" >
             {% endif %}
         </div>
         <div class="col-12 col-md-8">
